# FA25A164_GFA14_AIP491

./: .gitignore  ARCHITECTURE_SUMMARY.md  README.md  README_V2.md  SYSTEM_UPDATES.md  TRAINING_QUICKSTART.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: dependencies.py  legacy.py  middleware.py  schemas.py
app/api/v1/: __init__.py  health.py  predict.py
app/core/: config.py  exceptions.py  logging.py
app/models/: cnn_b0.py  cnnswin.py  efficientnetb0.py  hybridmodel.py  swin.py  swintiny.py
app/services/: inference.py
app/static/css/: styles.css
app/static/js/: app.js
app/templates/: index.html
app/utils/: gradcam.py
checkpoints/: load_weight.py
frontend/: README.md  package.json
frontend/app/: layout.js  page.js
frontend/app/api/predict/: route.js
scripts/: README.md
src/: __init__.py
src/core/: __init__.py
tests/: README.md
training/: README.md  train.py  train_efficientnetb0.py  train_hybrid_model.py  train_swin_tiny.py
weights/: __init__.py  load_weight.py
