[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cnnswin-gradcam-demo"
version = "0.1.0"
description = "Tiny reorganized layout for the CNN+Swin fusion Grad-CAM demo"
authors = [ { name = "Author", email = "you@example.com" } ]
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
